# speex_echo

./: CMakeCache.txt  README.md  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/vnetoo/speex/echo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/vnetoo/speex/echo/: AudioGlobal.java  AudioQuality.java  MainActivity.java  SpeexDsp.java  SpeexEcho.java
app/src/main/java/com/vnetoo/speex/echo/device/: AudioDevice.java  AudioRecordDataCallBack.java  CirCleBufer.java
app/src/main/java/com/vnetoo/speex/echo/dsp/: AndroidHardwareDsp.java  AudioDsp.java  AudioDspUtil.java  SimpleAudioDspFactory.java  SpeexAudioDsp.java
app/src/main/java/com/vnetoo/speex/echo/util/: AudioSampleUtil.java  EchoFixedFrameStream.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/echo/: CMakeLists.txt  audio_echo.c  echo_jni.c
app/src/main/jni/echo/include/: audio_echo.h  echo_config.h
app/src/main/jni/logs/: utils.h
app/src/main/jni/speexdsp/: CMakeLists.txt
app/src/main/jni/speexdsp/include/: Makefile  config.h
app/src/main/jni/speexdsp/include/speex/: Makefile  speexdsp_config_types.h
app/src/main/jni/speexdsp/libspeexdsp/: Makefile
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/vnetoo/speex/echo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
